fix: spacing-justify

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@ html {
   font-size: 1rem;
   font-weight: 400;
   line-height: 120%;
+  text-align: justify;
 }
 
 .SN-M-B-16 {
