--- a/src/Components/Research-page/ResearchPageMobile/ClinicalDrugTherapies/ClinicalDrugTherapies.module.css
+++ b/src/Components/Research-page/ResearchPageMobile/ClinicalDrugTherapies/ClinicalDrugTherapies.module.css
@@ -7,7 +7,7 @@
   }
 
   .mainSection header :nth-child(1) {
-    padding-bottom: 0.5rem;
+    padding-bottom: 1.5rem;
   }
 
   .afterBreak {
